# pixeltree

./: CMakeLists.txt  CMakePresets.json  README.md  initial_setup.md  vcpkg.json
cmake/modules/: CompilerWarnings.cmake  FindSIMD.cmake
examples/basic_generation/: main.cpp
examples/basic_generation/batch_processing/: main.cpp
include/pixeltree/: config.hpp.in  pixeltree.hpp
include/pixeltree/core/: lsystem.hpp  math_types.hpp  pixel_buffer.hpp  random.hpp  simd_utils.hpp  tree_generator.hpp  tree_parameters.hpp  tree_renderer.hpp  tree_structure.hpp
scripts/: build.bat  build.sh  setup_vcpkg.sh
tests/unit/: test_tree_generator.cpp
tests/unit/benchmarks/: benchmark_generation.cpp
tests/unit/integration/: test_full_workflow.cpp
